# ghostpost_backend

./: README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20201002_2351.py
ghostpost_backend/: settings.py  urls.py
